[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "traceghost"
version = "0.1.0"
authors = [
  { name="Izumi" },
]
description = "The Flight Recorder for Python Chaos"
readme = "README"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/izumi/traceghost"
